--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: EP03
 Type: Package
-Title: Software Tutorials for the EP03 Course
-Version: 0.1.0
-Date: 2017-11-06
+Title: Software Tutorials for the Survival Part of the Biostatistical Methods II Course
+Version: 0.2.0
+Date: 2019-10-07
 Author: Dimitris Rizopoulos <d.rizopoulos@erasmusmc.nl>
 Maintainer: Dimitris Rizopoulos <d.rizopoulos@erasmusmc.nl>
 Description: Contains learnr tutorials for the software practicals of the EP03 course.
-Depends: R (>= 3.4.1), learnr, JM, lattice
+Depends: learnr, lattice, splines
+Imports: JM
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
