--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2019-10-07
 Author: Dimitris Rizopoulos <d.rizopoulos@erasmusmc.nl>
 Maintainer: Dimitris Rizopoulos <d.rizopoulos@erasmusmc.nl>
 Description: Contains learnr tutorials for the software practicals of the EP03 course.
-Depends: learnr, survival, lattice, splines, shiny
+Depends: learnr, survival, lattice, splines
 Imports: JM
 License: GPL (>= 2)
 Encoding: UTF-8
