--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,4 @@ export("load_practical")
 importFrom("lattice", "xyplot")
 importFrom("splines", "ns", "bs")
 importFrom("learnr", "run_tutorial")
+importFrom("survival", "coxph", "cox.zph", "survfit", "survreg")
