--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: EP03Survival
+Package: EP03survival
 Type: Package
 Title: Software Tutorials for the Survival Part of the Biostatistical Methods II Course
 Version: 0.2.0
