--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,4 @@ EP03.Rproj
 *.Rproj.user
 *.history
 .gz
-/inst/tutorials/Practical1/*.html
-/inst/tutorials/Practical2/*.html
-/inst/tutorials/Practical3/*.html
-/inst/tutorials/Practical4/*.html
-/inst/tutorials/Practical5/*.html
+/inst/tutorials/*/*.html
